--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 	<meta property="og:image" content="https://mcbeeringi.github.io/ta/img/icon.png">
 	<link rel="apple-touch-icon" href="img/icon.png">
 	<meta name="theme-color" content="#214"/>
+
+	<link rel="stylesheet" href="https://mcbeeringi.github.io/src/style.css">
 </head>
 <body>
 	<style>
-		:root,textarea{background-color:#222;color:#fff;font-family:sans-serif;}
 		body{margin:0;}:link,:visited{color:#888;}
-		hr{border:0;background-color:#8888;height:2px;border-radius:2px;}
-		textarea{border:2px solid #8888;border-radius:4px;padding:4px;resize:none;font-family:monospace;}
 		.title{min-height:100vh;}img{width:100vmin;height:100vmin;}img,img+div{display:inline-block;vertical-align:middle;}
-		#ta{width:100%;white-space:pre;}
+		textarea{width:100%;white-space:pre;font-family:monospace;}
 	</style>
 	<div class="title">
 		<img src="img/icon.svg" alt="TA.js"><div>
@@ -33,11 +32,21 @@
 		</div>
 	</div>
 	<hr>
-	<textarea id="ta" spellcheck="false"></textarea>
+	<h2>TA.js</h2><textarea id="ta" spellcheck="false" class="input"></textarea><hr>
+	<h2>TA+.mjs</h2><textarea id="ta_" spellcheck="false" class="input"></textarea><hr>
 	<script src="ta.js"></script>
 	<script>
 		TA.editor(ta);
-		Promise.all(['README.md','ta.js'].map(async x=>await(await fetch(x)).text())).then(x=>{ta.value=x.join('\n\n');byte.textContent=`${new Blob([x[1]]).size} bytes`;TA.ah(ta);});
+		Promise.all(['README.md','ta.js'].map(async x=>`///// ${x} /////\n\n${await(await fetch(x)).text()}`)).then(async x=>{
+			ta.value=x.join('\n\n\n');byte.textContent=`${(await(await fetch('ta.js')).arrayBuffer()).byteLength} bytes`;TA.ah(ta);
+		});
+	</script>
+	<script type="module">
+		import TA from'./ta+.mjs'
+		TA.editor(ta_);
+		Promise.all(['ta+.mjs'].map(async x=>`///// ${x} /////\n\n${await(await fetch(x)).text()}`)).then(async x=>{
+			ta_.value=x.join('\n\n\n');TA.ah(ta_);
+		});
 	</script>
 </body>
 </html>
