--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<style>
 		body{margin:0;}:link,:visited{color:#888;}
 		.title{min-height:100vh;}img{width:100vmin;height:100vmin;}img,img+div{display:inline-block;vertical-align:middle;}
-		textarea{width:100%;white-space:pre;font-family:monospace;}
+		textarea{width:100%;white-space:pre;font-family:monospace !important;}
 	</style>
 	<div class="title">
 		<img src="img/icon.svg" alt="TA.js"><div>
