--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		textarea{width:100%;white-space:pre;font-family:monospace !important;}
 		.editor{position:relative;overflow:hidden;box-sizing:border-box;padding:8px;}
 		.editor>textarea::selection{color:#0000;background-color:#48f8;}
-		.editor>div{position:absolute;white-space:pre;font-family:monospace;pointer-events:none;font-size:medium;}
+		.editor>div{position:absolute;white-space:pre;font-family:monospace;pointer-events:none;font-size:medium;user-select:none;-webkit-user-select:none;}
 		.editor>textarea{border:0;padding:0;margin:0;resize:none;outline:0;color:#0000;background-color:#0000;caret-color:#fff;font-size:medium;}
 	</style>
 	<div class="title">
