--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>McbeEringi TA.js</title>
 	<meta name="description" content="A super tiny textarea code editor.">
-	<link rel="shortcut icon" type="image/svg+xml" href="img/icon.svg">
+	<link rel="icon" type="image/svg+xml" href="img/icon.svg">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="McbeEringi TA.js">
 	<meta property="og:description" content="A super tiny textarea code editor.">
