--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 	<link rel="apple-touch-icon" href="img/icon.png">
 	<meta name="theme-color" content="#214"/>
 
+	<script src="https://mcbeeringi.github.io/src/style.js" async></script>
 	<link rel="stylesheet" href="https://mcbeeringi.github.io/src/style.css">
 	<link href="https://cdn.jsdelivr.net/gh/PrismJS/prism-themes/themes/prism-one-dark.min.css" rel="stylesheet">
 </head>
 <body>
 	<style>
-		body{margin:0;}:link,:visited{color:#888;}
+		body{margin:0;}:any-link:not(header *){color:#888;}
 		.title{min-height:100vh;}img{width:100vmin;height:100vmin;}img,img+div{display:inline-block;vertical-align:middle;}
 		textarea{width:100%;white-space:pre;font-family:monospace !important;}
 		.editor{position:relative;overflow:hidden;box-sizing:border-box;padding:8px;}
