--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 		</div>
 	</div>
 	<hr>
-	<h2>TA.js</h2><textarea id="ta" spellcheck="false" class="input"></textarea><hr>
-	<h2>TA+.mjs</h2><textarea id="ta_" spellcheck="false" class="input"></textarea><hr>
+	<h2>TA.js</h2><textarea id="ta" spellcheck="false" class="zab"></textarea><hr>
+	<h2>TA+.mjs</h2><textarea id="ta_" spellcheck="false" class="zab"></textarea><hr>
 	<h2>with PrismJS</h2>
 	<div class="editor">
 		<div id="edt_" class="language-js"></div>
