--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 	<hr>
-	<h2>TA.js</h2><textarea id="ta" spellcheck="false" class="zab"></textarea>
+	<textarea id="ta" spellcheck="false" class="zab"></textarea>
 	<script type="module">
 		import TA from'./ta.mjs'
 		TA.editor(ta);
